--- a/javaweb-filter/web/WEB-INF/web.xml
+++ b/javaweb-filter/web/WEB-INF/web.xml
@@ -13,4 +13,7 @@
         <url-pattern>/servlet/*</url-pattern>
         <!--<url-pattern>/*</url-pattern>-->
     </filter-mapping>
+    <listener>
+        <listener-class>com.zty.listener.OnlineCountListener</listener-class>
+    </listener>
 </web-app>
